Fixed layout on the chatscreen and aligned the messaging accordingly

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -134,3 +134,15 @@ body {
     margin-right: 0px;
     padding-right: 0px;
 }
+
+.message-from-me li {
+    margin-right: 0px;
+    width: 15px;
+    float: right;
+}
+
+.message-from-other li {
+    margin-left: 0px;
+    width: 15px;
+    float: left;
+}
